<resources>
    <string name="app_name">Dishi</string>

    <string name="google_directions_key">API KEY</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Dishi</string>
    <string name="slide_1_desc">Order food that\'s in close proximity to you</string>
    <string name="slide_2_title">Delivery</string>
    <string name="slide_2_desc">Have it delivered to you in real-time</string>
    <string name="slide_3_title">Share</string>
    <string name="slide_3_desc">Congratulations, you are now a Dishi foodie. Share your food journey.</string>
    <string name="play_again_desc">Clear app data to see welcome slider again</string>
    <string name="play_again">Play Again</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="tag_send">send</string>
    <string name="tag_verify">verify</string>

    <!-- Phone Verification-->
    <string name="verify">Verifying your number!</string>
    <string name="sent">We have sent an OTP on your number</string>
    <string name="resend">Resend Code?</string>
    <string name="need">We need to text you a verification code</string>
    <string name="auth">to authenticate your account</string>
    <string name="phone">Your mobile number</string>
    <string name="number">+91-4445556987</string>
    <string name="ok">OK</string>

    <!-- Restaurant Bottom Nav-->
    <string name="item_1">Orders</string>
    <string name="item_2">Profile</string>
    <string name="item_3">Menu</string>
    <string name="item_7">Deliveries</string>

    <!-- Customer Bottom Nav-->
    <string name="item_4">Order</string>
    <string name="item_5">Profile</string>
    <string name="item_6">Restaurants</string>
    <string name="history">History</string>


    <string name="action_cart">My basket</string>

    <!-- Toolbar-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_new">New Item</string>
    <string name="about_app">About</string>
    <string name="logo_desc">App logo</string>

    <!-- Add menu activity toolbar-->
    <string name="action_multiple">Add Multiple</string>
    <string name="action_save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_geo_fire">Map</string>
</resources>