<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_cart"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_shopping_cart_white_48dp"
        android:orderInCategory="200"
        app:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="300"
        app:showAsAction="always" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_exit_to_app_white_48dp"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />
</menu>