<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient2">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo"/>

    <malcolmmaima.dishi.customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/need"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
    <malcolmmaima.dishi.customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/auth"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp"
        app:cardBackgroundColor="#FBF7F7"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <EditText
                    android:id="@+id/numbered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="15dp"
                    android:hint="+254"
                    android:inputType="phone" />

                <ImageView
                    android:id="@+id/verifiedsign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-40dp"
                    android:src="@drawable/ic_check_circle_black_24dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <EditText
                android:id="@+id/verificationed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rect_text_edit"
                android:hint="Enter Code"
                android:inputType="phone"
                android:padding="10dp"
                android:visibility="invisible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/sendverifybt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/ic_send_white_24dp"
                android:tag="@string/tag_send"
                app:backgroundTint="@color/dot_inactive_screen1" />

            <TextView
                android:id="@+id/timertv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15sp"
                android:clickable="true"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>